--- a/Random Users/Resources/Base.lproj/Main.storyboard
+++ b/Random Users/Resources/Base.lproj/Main.storyboard
@@ -1,148 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="dTQ-7R-aaj">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
     </dependencies>
-    <scenes>
-        <!--Users-->
-        <scene sceneID="SN2-zc-TnN">
-            <objects>
-                <tableViewController id="FTP-Rb-cQo" customClass="ContactsTableViewController" customModule="Random_Users" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="4Rv-YY-pf6">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="ContactCell" rowHeight="80" id="0F5-qK-bpu" customClass="ContactTableViewCell" customModule="Random_Users" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="414" height="80"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="0F5-qK-bpu" id="dDP-na-XEg">
-                                    <rect key="frame" x="0.0" y="0.0" width="383" height="80"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                    <subviews>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Ie7-td-heV">
-                                            <rect key="frame" x="20" y="9" width="62" height="63"/>
-                                            <constraints>
-                                                <constraint firstAttribute="height" constant="63" id="drM-L6-Qrj"/>
-                                                <constraint firstAttribute="width" constant="62" id="tCq-J0-Iht"/>
-                                            </constraints>
-                                        </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="User Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cRC-EX-sLi">
-                                            <rect key="frame" x="98" y="30" width="257" height="20"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                    </subviews>
-                                    <constraints>
-                                        <constraint firstAttribute="trailingMargin" secondItem="cRC-EX-sLi" secondAttribute="trailing" constant="20" id="Nmh-IT-6FV"/>
-                                        <constraint firstItem="Ie7-td-heV" firstAttribute="leading" secondItem="dDP-na-XEg" secondAttribute="leading" constant="20" id="aV8-Je-cgE"/>
-                                        <constraint firstAttribute="bottom" secondItem="Ie7-td-heV" secondAttribute="bottom" constant="8" id="deB-Ax-1Gz"/>
-                                        <constraint firstItem="cRC-EX-sLi" firstAttribute="centerY" secondItem="dDP-na-XEg" secondAttribute="centerY" id="eFU-xn-DGB"/>
-                                        <constraint firstItem="cRC-EX-sLi" firstAttribute="leading" secondItem="Ie7-td-heV" secondAttribute="trailing" constant="16" id="tVF-de-Vpz"/>
-                                        <constraint firstItem="Ie7-td-heV" firstAttribute="top" secondItem="dDP-na-XEg" secondAttribute="top" constant="9" id="ute-0U-C7J"/>
-                                    </constraints>
-                                </tableViewCellContentView>
-                                <connections>
-                                    <outlet property="contactImage" destination="Ie7-td-heV" id="yUH-Km-LFb"/>
-                                    <outlet property="contactNameLabel" destination="cRC-EX-sLi" id="5jT-ph-Nhf"/>
-                                    <segue destination="W2U-yV-rJF" kind="show" identifier="ShowContactDetailSegue" id="9ay-lv-ibf"/>
-                                </connections>
-                            </tableViewCell>
-                        </prototypes>
-                        <connections>
-                            <outlet property="dataSource" destination="FTP-Rb-cQo" id="JOd-le-EOS"/>
-                            <outlet property="delegate" destination="FTP-Rb-cQo" id="2Y4-Cu-9BA"/>
-                        </connections>
-                    </tableView>
-                    <navigationItem key="navigationItem" title="Users" id="hbB-Bg-m1R"/>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Xax-qa-Vj2" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-46.376811594202906" y="134.59821428571428"/>
-        </scene>
-        <!--Contact Detail View Controller-->
-        <scene sceneID="ZM1-Xm-oyW">
-            <objects>
-                <viewController id="W2U-yV-rJF" customClass="ContactDetailViewController" customModule="Random_Users" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="lry-lI-P2v">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="eqp-Wj-0mB">
-                                <rect key="frame" x="20" y="146" width="374" height="351"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="351" id="9RV-zy-VCo"/>
-                                    <constraint firstAttribute="width" constant="374" id="F0O-RQ-KDn"/>
-                                </constraints>
-                            </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="User Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EHu-FW-Ykl">
-                                <rect key="frame" x="20" y="542" width="374" height="30"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Phone Number" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zxr-HE-c1r">
-                                <rect key="frame" x="20" y="580" width="374" height="18"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kpF-UN-eSL">
-                                <rect key="frame" x="20" y="609" width="374" height="18"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                        </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <constraints>
-                            <constraint firstItem="eqp-Wj-0mB" firstAttribute="leading" secondItem="Dfi-7K-Vx4" secondAttribute="leading" constant="20" id="3ob-Yq-cI7"/>
-                            <constraint firstItem="kpF-UN-eSL" firstAttribute="top" secondItem="Zxr-HE-c1r" secondAttribute="bottom" constant="11" id="8A1-4P-60y"/>
-                            <constraint firstItem="EHu-FW-Ykl" firstAttribute="top" secondItem="eqp-Wj-0mB" secondAttribute="bottom" constant="45" id="J5t-xC-5X8"/>
-                            <constraint firstItem="Dfi-7K-Vx4" firstAttribute="trailing" secondItem="kpF-UN-eSL" secondAttribute="trailing" constant="20" id="QsU-xJ-7b8"/>
-                            <constraint firstItem="EHu-FW-Ykl" firstAttribute="leading" secondItem="Dfi-7K-Vx4" secondAttribute="leading" constant="20" id="Tjk-nE-TSK"/>
-                            <constraint firstItem="Zxr-HE-c1r" firstAttribute="top" secondItem="EHu-FW-Ykl" secondAttribute="bottom" constant="8" id="WZO-sW-nRS"/>
-                            <constraint firstItem="Dfi-7K-Vx4" firstAttribute="trailing" secondItem="Zxr-HE-c1r" secondAttribute="trailing" constant="20" id="ZWW-ye-wIB"/>
-                            <constraint firstItem="Dfi-7K-Vx4" firstAttribute="trailing" secondItem="eqp-Wj-0mB" secondAttribute="trailing" constant="20" id="fDD-KK-jMM"/>
-                            <constraint firstItem="Dfi-7K-Vx4" firstAttribute="trailing" secondItem="EHu-FW-Ykl" secondAttribute="trailing" constant="20" id="qeS-Mf-7vg"/>
-                            <constraint firstItem="Zxr-HE-c1r" firstAttribute="leading" secondItem="Dfi-7K-Vx4" secondAttribute="leading" constant="20" id="rET-GL-06k"/>
-                            <constraint firstItem="eqp-Wj-0mB" firstAttribute="top" secondItem="Dfi-7K-Vx4" secondAttribute="top" constant="58" id="xtg-zD-Yev"/>
-                            <constraint firstItem="kpF-UN-eSL" firstAttribute="leading" secondItem="Dfi-7K-Vx4" secondAttribute="leading" constant="20" id="yEm-Ru-kVn"/>
-                        </constraints>
-                        <viewLayoutGuide key="safeArea" id="Dfi-7K-Vx4"/>
-                    </view>
-                    <navigationItem key="navigationItem" id="xW7-0k-ZFA"/>
-                    <connections>
-                        <outlet property="emailLabel" destination="kpF-UN-eSL" id="oQr-Hc-rVv"/>
-                        <outlet property="phoneNumberLabel" destination="Zxr-HE-c1r" id="p6H-jM-5Qm"/>
-                        <outlet property="userImage" destination="eqp-Wj-0mB" id="ebS-wz-0sY"/>
-                        <outlet property="usernameLabel" destination="EHu-FW-Ykl" id="Zvs-b6-e2M"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="d4G-yv-faN" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="718.84057971014499" y="134.59821428571428"/>
-        </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="gX9-W8-kpT">
-            <objects>
-                <navigationController id="dTQ-7R-aaj" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="VMG-NL-Wyh">
-                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <connections>
-                        <segue destination="FTP-Rb-cQo" kind="relationship" relationship="rootViewController" id="DLS-8u-WyK"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="gGl-WR-3c1" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-860" y="135"/>
-        </scene>
-    </scenes>
+    <scenes/>
 </document>
