--- a/Random Users/Storyboards/Base.lproj/Main.storyboard
+++ b/Random Users/Storyboards/Base.lproj/Main.storyboard
@@ -24,6 +24,26 @@
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Tw6-k5-CRB" id="fRx-88-eiC">
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Oms-9z-iqI">
+                                            <rect key="frame" x="16" y="0.0" width="43.5" height="43.5"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" secondItem="Oms-9z-iqI" secondAttribute="height" multiplier="1:1" id="GcB-0P-I5a"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yHb-68-1L6">
+                                            <rect key="frame" x="68" y="11.5" width="285" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="Oms-9z-iqI" firstAttribute="leading" secondItem="fRx-88-eiC" secondAttribute="leading" constant="16" id="0qp-NT-13W"/>
+                                        <constraint firstAttribute="bottom" secondItem="Oms-9z-iqI" secondAttribute="bottom" id="mHS-4G-ZL9"/>
+                                        <constraint firstItem="yHb-68-1L6" firstAttribute="centerY" secondItem="fRx-88-eiC" secondAttribute="centerY" id="sjk-9X-uVt"/>
+                                        <constraint firstItem="Oms-9z-iqI" firstAttribute="top" secondItem="fRx-88-eiC" secondAttribute="top" id="tOa-JH-lkg"/>
+                                    </constraints>
                                 </tableViewCellContentView>
                                 <connections>
                                     <segue destination="E2i-iS-RcS" kind="show" identifier="ViewSegue" id="aAe-El-gCy"/>
@@ -41,7 +61,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Wp1-0D-TDx" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-358" y="14"/>
+            <point key="canvasLocation" x="-359.19999999999999" y="13.943028485757123"/>
         </scene>
         <!--Person View Controller-->
         <scene sceneID="BmJ-0l-hQu">
