--- a/Random Users/Base.lproj/Main.storyboard
+++ b/Random Users/Base.lproj/Main.storyboard
@@ -49,7 +49,7 @@
                                 </tableViewCellContentView>
                                 <connections>
                                     <outlet property="contactImage" destination="phb-1d-KRB" id="e47-aC-h28"/>
-                                    <outlet property="contactNameLabel" destination="AdY-Nv-hhp" id="jmF-h6-eTM"/>
+                                    <outlet property="contactName" destination="AdY-Nv-hhp" id="myt-Aw-N8h"/>
                                     <segue destination="pzS-fX-PM7" kind="show" identifier="ShowContactDetailSegue" id="UEM-3p-8bL"/>
                                 </connections>
                             </tableViewCell>
@@ -118,10 +118,10 @@
                     </view>
                     <navigationItem key="navigationItem" id="XkU-3D-FDa"/>
                     <connections>
-                        <outlet property="emailLabel" destination="3AB-2J-iXf" id="BV1-Uo-dad"/>
-                        <outlet property="phoneNumberLabel" destination="ViC-eb-GC4" id="Jlb-fq-I5j"/>
-                        <outlet property="userImage" destination="pxy-vp-HCx" id="4Q3-EL-yei"/>
-                        <outlet property="usernameLabel" destination="vio-53-sKF" id="05e-lI-9XW"/>
+                        <outlet property="conctactEmail" destination="3AB-2J-iXf" id="Aur-Gv-Age"/>
+                        <outlet property="contactImage" destination="pxy-vp-HCx" id="ViP-fQ-Eaj"/>
+                        <outlet property="contactName" destination="vio-53-sKF" id="lmq-lS-t4M"/>
+                        <outlet property="contactNumber" destination="ViC-eb-GC4" id="vWh-OQ-stU"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9rA-xj-ywh" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
